[bumpversion]
current_version = 0.1.1
commit = true
tag = true

[bumpversion:file:toa_simulation/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = hgcroc-toa-simulator
version = attr: hgcroc_toa_simulator.__version__
author = Alexander Becker
author_email = a.becker@cern.ch
description = Application that simulates the two-stage TDC implemented in the HGCROCv3 ASIC
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = simulation, electronics, science
python_requires = >=3.6
license = GPL3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Environment :: Console

[options]
include_package_data = True
packages = find:
install_requires =
  numpy; python_version < "3.9"
  matplotlib; python_version < "3.9"
  PyQt6; python_version < "3.9"

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    toa_simulator.tests*

[options.entry_points]
console_scripts =
    toa-simulator = hgcroc_toa_simulator.cli:cli
